# CrioGui3

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
scripts/: ssh.bat
src/BasicWidgets/: QBetterSwitchButton.cpp  QBetterSwitchButton.h  QClientsVizu.cpp  QClientsVizu.h  QThermometer.cpp  QThermometer.h  QUnitDispatcher.cpp  QUnitDispatcher.h  QValueSearchBox.cpp  QValueSearchBox.h
src/Extractors/: QCrioModulesDataExtractor.h
src/NISpecifics/: NIDeviceModule.cpp  NIDeviceModule.h
src/NetWorking/: QSSHCommand.cpp  QSSHCommand.h  QSSLBaseClient.cpp  QSSLBaseClient.h  QSSLCommandClient.cpp  QSSLCommandClient.h  QSSLCurrentPoller.cpp  QSSLCurrentPoller.h  QSSLDebugClient.cpp  QSSLDebugClient.h  QSSLVoltagePoller.cpp  QSSLVoltagePoller.h  certificateinfo.cpp  certificateinfo.h
src/TabWidgetFundations/CrioDirectAccessTestWidgets/: QBaseAnalogReaderTestWidget.cpp  QBaseAnalogReaderTestWidget.h  QReadCurrentTestWidget.cpp  QReadVoltageTestWidget.cpp
src/TabWidgetFundations/CrioGeneralParameters/: QCrioBaseCpuWidget.cpp  QCrioDataDrillCpuWidget.cpp  QCrioHDDWidget.cpp  QCrioTotalCpuWidget.cpp  QCrioTotalRamWidget.cpp  QDataDrillHDDWidget.cpp  QDataDrillRamWidget.cpp
src/TabWidgetFundations/ModbusMaping/: QBackUpWidget.cpp  QMappingRowWidget.h
src/TabWidgetFundations/ModbusWidgets/: QAlarmViewerWidget.cpp  QAlarmViewerWidget.h  QExlogCompatibilityWidget.cpp  QExlogCompatibilityWidget.h  QModbusCapacitiesWidget.cpp  QModbusCapacitiesWidget.h  QModbusLoadSaveUploadWidget.cpp  QModbusLoadSaveUploadWidget.h
src/TabWidgetFundations/Modules/: QModulesIniListView.h
src/TabWidgets/: QCrioViewWidget.cpp  QCrioViewWidget.h  QDeviceParametersWidget.cpp  QGlobalParametersWidget.cpp  QMappingViewerWidget.cpp  QMappingViewerWidget.h  QModbusSetupViewer.cpp  QModbusSetupViewer.h
styles/: dark1.scss
